# 3d_rendering

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  run.sh  shell.nix
.github/appimage/: AppImageBuilder.yml  app.desktop
.github/workflows/: build.yml  pull_request.yml  release.yml  rust.yml
assets/: chess.mtl
src/: app.rs  camera.rs  main.rs  renderer.rs
src/app/: input.rs  mod.rs
src/app/panels/: center_panel.rs  help.rs  mod.rs  right_panel.rs  top_panel.rs
src/camera/: camera.rs  camera_uniform.rs
src/game_logic/: chess.rs
src/game_logic/chess/: coords.rs  messages.rs  mod.rs  scene.rs  state.rs  types.rs
src/networking/: connection.rs  sync.rs
src/render/: intersection.rs  mod.rs  pipeline.rs  renderer.rs  renderer_ops.rs
src/render/animation/: chaos_gravity.rs  mod.rs  move_jump.rs  simple_animation.rs
src/render/buffers/: mod.rs
src/render/buffers/camera/: camera_raw.rs  mod.rs
src/render/buffers/color/: color_raw.rs  mod.rs
src/render/buffers/light/: light_raw.rs  mod.rs
src/render/buffers/texture/: mod.rs  texture_raw.rs
src/render/buffers/transform/: mod.rs  transform_raw.rs
src/render/buffers/vertex/: mod.rs  vertex_raw.rs
src/render/instance/: instance.rs  instance_raw.rs  mod.rs
src/render/mesh/: axis.rs  cube.rs  mod.rs
src/render/model/: material.rs  mesh.rs  mod.rs  model_uniform.rs  outline.rs  renderable_object.rs  vertex.rs
src/render/model/camera/: camera_raw.rs  mod.rs
src/render/shader/: mesh_shader.wgsl  shader.wgsl
src/render/shapes/: cube.rs  mod.rs  pyramid.rs
(+13 files in other folders)
