[package]
name = "opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.31", features = [ "wgpu" ] }
wgpu = { version = "*", features = [ "spirv" ]}
env_logger = "0.11"
bytemuck = "1.23"
log = "0.4.27"
cgmath = "0.18.0"
