[package]
name = "opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.31", features = [ "wgpu" ] }
env_logger = "0.11"
bytemuck = "1.23"
cgmath = "0.18.0"
tobj = "4.0.3"
image = "0.25.6"
anyhow = "1.0.98"
