[package]
name = "rendering"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.31", features = [ "wgpu" ] }
env_logger = "0.11"
bytemuck = "1.23"
glam = { version = "0.25.0", features = ["serde"] }
tobj = "4.0.3"
image = "0.25.6"
anyhow = "1.0.98"
rfd = "0.15.3"
libp2p = { version = "0.56.0", features = ["gossipsub", "tcp", "noise", "yamux", "request-response", "cbor", "mdns", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
log = "0.4"
